Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P3: Somewhat important
-
Resolution: Done
-
Affects Version/s: 5.2.0
-
Fix Version/s: 5.3.0
-
Component/s: Quick: Core Declarative QML
-
Labels:
-
Commits:439f31f128e70ecae16544ee7041695c60e0b2d6
Description
Even when the Canvas is invisible, it emits a paint signal, which imho should not be the case.
Example:
import QtQuick 2.0 Canvas { id: canvas visible: false height: 200 NumberAnimation on width { from: 200 to: 300 duration: 500 } Timer { interval: 300 running: true onTriggered: canvas.visible = true } onPaint: { print("Painting; Visible:" + canvas.visible) } }