Dont call updatePolish if an item is not visible

[ChangeLog][QtQuick][QQuickItem] "updatePolish" is not called for invisible items any more.

Task-number: QTBUG-31830
Change-Id: Idad6107afaf0c6e6c96d9404ac286695c21883c7
Reviewed-by: Robin Burchell <robin+qt@viroteck.net>
Reviewed-by: Gunnar Sletta <gunnar.sletta@jollamobile.com>