tests/auto/quick/qquickcanvasitem/data/tst_canvas.qml
@@ -180,11 +180,20 @@ CanvasTestCase {
        tryCompare(c, "availableChangedCount", 1);
        //scene graph could be available immediately
        //in this case, we force waiting a short while until the init paint finished
-       tryCompare(c, "paintedCount", 1);
+       if (c.visible) {
+           tryCompare(c, "paintedCount", 1);
+       } else {
+           tryCompare(c, "paintedCount", 0);
+       }
        ctx.fillRect(0, 0, c.width, c.height);
        c.toDataURL();
-       tryCompare(c, "paintedCount", 2);
-       tryCompare(c, "paintCount", 1);
+       if (c.visible) {
+           tryCompare(c, "paintCount", 1);
+           tryCompare(c, "paintedCount", 2);
+       } else {
+           tryCompare(c, "paintCount", 0);
+           tryCompare(c, "paintedCount", 1);
+       }
        c.destroy();
   }
    function test_loadImage(row) {
